# nest

./: .env.template  .env.test  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  Makefile  docker-compose.yml  docker-entrypoint.sh  forms.json  manage.py  mprocs.yaml  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  render.yaml  schema.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yaml
.github/actions/frontend-lint/: action.yaml
.github/actions/setup/: action.yaml
.github/actions/setup-node/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: ci.yaml  dependabot-automerge.yaml
cli/: __main__.py  main.py
cli/commands/: build.py
cli/commands/utils/: colors.py  config.py  decorators.py  executables.py  helpers.py  managers.py
frontend/: App.tsx  Main.tsx  index.tsx
frontend/apps/: App.tsx  BaseApp.tsx  apps.tsx  config.tsx  index.tsx  urls.ts
frontend/apps/ingredients/: App.tsx  index.tsx  overview.tsx  routes.ts
frontend/apps/login/: App.tsx  index.tsx
frontend/apps/plans/: App.test.tsx  App.tsx  index.tsx
frontend/apps/products/: App.tsx  index.tsx  routes.ts  urls.ts
frontend/apps/recipe/: App.tsx  index.tsx  routes.ts
frontend/apps/recipes/: App.tsx  index.tsx  routes.ts
frontend/apps/settings/: App.tsx  index.tsx
frontend/apps/users/: App.tsx  index.tsx  urls.ts
frontend/assets/: index.css
frontend/components/BaseApp/: BaseApp.tsx
frontend/components/Button/: index.tsx
frontend/components/Card/: Card.styles.ts  Form.tsx  KeyValue.tsx  Table.tsx  index.tsx
frontend/components/ColorSchemeSwitch/: index.tsx
frontend/components/ConfirmationModal/: index.tsx
frontend/components/Counter/: index.tsx
frontend/components/Drawer/: index.tsx
frontend/components/Empty/: index.tsx
frontend/components/Form/: index.tsx  types.ts
frontend/components/Header/: index.tsx
frontend/components/Logo/: index.tsx
frontend/config/: paths.js
frontend/contexts/: CommonProvider.tsx  MenuProvider.tsx  UnitsProvider.tsx
frontend/hooks/: confirm-modal.tsx  drag-and-drop.ts  enum-to-options.ts  route.ts
frontend/layouts/: Overview.tsx
frontend/public/: main.tsx
frontend/state/: CommonProvider.tsx
frontend/styles/: common.ts
frontend/tests/: utils.tsx
frontend/types/: index.ts
frontend/utils/: generate-types.cjs
nest/: admin.py  alembic.ini  app.py  apps.py  asgi.py  config.py  conftest.py  exceptions.py  logging_utils.py  main.py  menu.py  settings.py  urls.py  views.py  wsgi.py
nest/api/: __init__.py  apps.py  base.py  factory.py  fields.py  files.py  openapi.py  operation.py  parsers.py  renderers.py  responses.py  router.py  status.py  types.py  v1.py
nest/app_components/: apps.py
nest/audit_logs/: apps.py  managers.py  models.py  records.py  selectors.py  services.py  utils.py
nest/clients/: __init__.py  base.py  oda.py
nest/core/: admin.py  apps.py  clients.py  decorators.py  exceptions.py  fields.py  files.py  models.py  openapi.py  records.py  services.py  types.py
nest/database/: __init__.py  base.py  core.py  decorators.py  mixins.py  sessions.py  transaction.py  utils.py
nest/decorators/: __init__.py  staff.py
nest/endpoints/: __init__.py
nest/enums/: __init__.py  units.py
nest/forms/: __init__.py  api_view.py  apps.py  base.py  fields.py  form.py  forms.py  helpers.py  models.py  records.py  types.py  utils.py
nest/frontend/: apps.py  components.py  elements.py  menu.py  records.py  selectors.py
nest/homes/: apps.py  managers.py  models.py  records.py  selectors.py
nest/ingredients/: apps.py  managers.py  models.py  records.py  selectors.py  services.py
nest/middlewares/: __init__.py  logging.py  query_count.py  sqlalchemy.py
nest/migrations/: 0001_initial.py  0002_home_user_home.py  0002_home_user_home_user_homes.py  0002_home_user_homes.py  0002_outstandingtoken_blacklistedtoken.py  0003_unit.py  0003_user_home.py  0004_alter_user_homes.py  0004_auto_20230411_1739.py  0004_product.py  0005_product.py
nest/models/: __init__.py  base.py  homes.py  products.py  tokens.py  units.py  user.py  users.py
nest/products/: apps.py  constants.py  forms.py  managers.py  models.py  records.py  router.py  selectors.py  services.py  signals.py
nest/recipes/: apps.py  enums.py  forms.py  managers.py  models.py  records.py  router.py  selectors.py  services.py  types.py
nest/records/: __init__.py  core.py  homes.py  oda.py  products.py  tokens.py  units.py  users.py
nest/selectors/: __init__.py  auth.py  core.py  homes.py  products.py  units.py  users.py
nest/services/: __init__.py  auth.py  base.py  products.py  users.py
nest/signals/: __init__.py  hijack.py
nest/templates/: frontend.html
nest/tests/: conftest.py  test_urls.py  test_y.py
nest/units/: apps.py  endpoints.py  enums.py  managers.py  models.py  records.py  selectors.py  utils.py
nest/users/: apps.py  enums.py  forms.py  managers.py  models.py  records.py  router.py  selectors.py  services.py  signals.py
nest/utils/: __init__.py  dates.py  humps.py
nest/views/: __init__.py  base.py  frontend.py  login.py
tests/: conftest.py
tests/core/: test_util_pydantic.py
tests/factories/: endpoints.py  fixtures.py  records.py
tests/helpers/: clients.py  factories.py  types.py  users.py
tests/homes/: fixtures.py
tests/products/: fixtures.py  test_core_endpoints.py  test_core_selectors.py  test_core_services.py  test_core_urls.py  test_exp.py  test_oda_endpoints.py  test_oda_urls.py  utils.py
tests/recipes/: fixtures.py  test_core_endpoints.py  test_core_selectors.py  test_core_services.py  test_core_urls.py  test_ingredients_endpoints.py  test_ingredients_services.py  test_ingredients_urls.py  test_plans_algorithm.py  test_plans_endpoints.py  test_plans_selectors.py  test_plans_services.py  test_steps_endpoints.py  test_steps_selectors.py  test_steps_services.py  test_steps_urls.py
tests/units/: fixtures.py
tests/users/: test_core_endpoints.py  test_core_urls.py
(+395 files in other folders)
