[tool.poetry]
name = "nest"
version = "0.1.0"
description = "Nest is a project for managing my home (nest)"
authors = ["Daniel Kjellid <daniel.kjellid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.5"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.46"
alembic = "^1.9.2"
fastapi-utils = "^0.2.1"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
greenlet = "^2.0.1"
ipython = "^8.8.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
ruff = "^0.0.236"
mypy = "^0.991"
pytest = "^7.2.1"
pytest-pretty = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#########
# Black #
#########

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = 'migrations'
safe = true

########
# Mypy #
########

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
follow_imports = "normal"
ignore_missing_imports = true
strict = true

disallow_subclassing_any = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

##########
# Pytest #
##########

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["nest"]
python_files = "test_*.py"
# Reuse the database between tests
addopts = [
    "--reuse-db",
    "--allow-hosts=localhost,::1,127.0.0.1",
]
# Include captured log messages in system-out in CI report file
junit_logging = "system-out"
# --- pytest-env settings
env = ["ENV_PATH=.env.test"]
